--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="Discover your perfect car at Imports By Clevik! Explore new and used cars, special financing offers, and trade-in options. Contact us today for the best deals!">
-    <meta name="description" content="Explore imported cars, luxury vehicles, and foreign used cars at Imports by Clevik. Find premium options with top deals. Contact us for importation and purchase today!">
+    <meta property="og:description" content="Imports by Clevik is your one stop Market Place for Brand new &amp; used cars, spare parts and vehicle accessories"/>
+    <meta name="description" content="Imports by Clevik is the leading direct auto-importers in Kenya, Facilitating imports of new &amp; used vehicles from UK/JAPAN/SA">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:type" content="website" />
     <link rel="shortcut icon" href="assets/imports.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Imports by Clevik</title>
@@ -84,6 +86,10 @@
                 </select>
                 <button>Search</button>
             </div>
+            <h2>Best Car Importers in Kenya and East Africa</h2>
+    <p>Imports by Clevik specializes in importing top-selling Japanese, luxury, and foreign used cars to Kenya.<br>
+        From Toyota to BMW, we bring your dream car.</p>
+    <a href="#contact" class="cta-button">Import Your Car Now</a>
         </section>
 
         <section class="browse-by-type">
