--- a/index.html
+++ b/index.html
@@ -86,14 +86,14 @@
                 </select>
                 <button>Search</button>
             </div>
-         
+         <h2>Best Car Importers in Kenya and East Africa</h2>
+    <p>Imports by Clevik specializes in importing top-selling Japanese, luxury, and foreign used cars to Kenya.<br>
+        From Toyota to BMW, we bring your dream car.</p>
+    <a href="#contact" class="submit-btn">Import Your Car Now</a>
         </section>
 
         <section class="browse-by-type">
-               <h2>Best Car Importers in Kenya and East Africa</h2>
-    <p>Imports by Clevik specializes in importing top-selling Japanese, luxury, and foreign used cars to Kenya.<br>
-        From Toyota to BMW, we bring your dream car.</p>
-    <a href="#contact" class="cta-button">Import Your Car Now</a>
+               
             <h2>Browse by Type</h2>
             <div class="car-types">
                 <div class="car-type">
