--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
                 </select>
                 <button>Search</button>
             </div>
-         <h2 class="white">Best Car Importers in Kenya and East Africa</h2>
-    <p class="white">Imports by Clevik specializes in importing top-selling Japanese, luxury, and foreign used cars to Kenya.<br>
+         <h1>Best Car Importers in Kenya and East Africa</h1>
+    <p>Imports by Clevik specializes in importing top-selling<span class="white"> Japanese, luxury</span> and <span class"white">foreign used</span> cars to Kenya.<br>
         From Toyota to BMW, we bring your dream car.</p>
     <a href="#contact" class="submit-btn">Import Your Car Now</a>
         </section>
