--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <button>Search</button>
             </div>
          <h1>Best Car Importers in Kenya and East Africa</h1>
-    <p class="p">Imports by Clevik specializes in importing top-selling Japanese, luxury and foreign used cars to Kenya.<br>
+    <p>Imports by Clevik specializes in importing top-selling Japanese, luxury and foreign used cars to Kenya.<br>
         From Toyota to BMW, we bring your dream car.</p>
     <a href="#contact" class="submit-btn">Import Your Car Now</a>
         </section>
