--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 <div class="auth">
                     <!-- <a href="#" class="sign-in">Sign In</a> -->
                     <a href="view-all.html" class="submit-btn">Buy a Car</a>
+                    <a href="#contact" class="submit-btn">Import a Car</a>
                 </div>
             </div>
             <div class="hamburger">
@@ -89,8 +90,7 @@
          <h1>Best Car Importers in Kenya and East Africa</h1>
     <p>Imports by Clevik specializes in importing top-selling Japanese, luxury and foreign used cars to Kenya.<br>
         From Toyota to BMW, we bring your dream car.</p>
-    <a href="#contact" class="submit-btn">Import Your Car Now</a>
-        </section>
+            </section>
 
         <section class="browse-by-type">
                
